@@ -1,3 +1,11 @@
+2017-06-22  Jakub Jelinek  <jakub@redhat.com>
+
+	Backported from mainline
+	2017-06-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/81130
+	* testsuite/libgomp.c++/pr81130.C: New test.
+
 2017-06-22  Martin Liska  <mliska@suse.cz>
 
 	Backport from mainline
